# dockpit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  FEATURES.md  LICENSE  README.md  SECURITY_AUDIT.md  docker-compose.agent.prod.yml  docker-compose.agent.yml  docker-compose.prod.yml  docker-compose.yml  docker-push.sh  dockerhub_readme.md  vex.json
.github/: FUNDING.yml
frontend/: STYLE_GUIDE.md  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/i18n/: de.ts  en.ts  index.ts
frontend/src/lib/stores/: auth.ts  environment.ts  favorites.ts  stats.ts  theme.ts  toast.ts  widgets.ts
frontend/src/lib/utils/: format.ts  resizable-columns.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/containers/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/dependencies/: +page.svelte
frontend/src/routes/environments/: +page.svelte
frontend/src/routes/events/: +page.svelte
frontend/src/routes/health/: +page.svelte
frontend/src/routes/host-terminal/: +page.svelte
frontend/src/routes/images/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/monitoring/: +page.svelte
frontend/src/routes/networks/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/: manifest.json
src/: auth.rs  db.rs  docker.rs  handlers.rs  main.rs  models.rs  stacks.rs
(+40 files in other folders)
